--- a/takım.html
+++ b/takım.html
@@ -41,7 +41,7 @@
                 <img src="https://cdn.pixabay.com/photo/2012/04/26/19/43/profile-42914_960_720.png" alt="">
                 <div class="name">Semih Murat Arslan</div>
                 <div class="desig">3D Designer</div>
-                <div class="about"> Tasarım bilgisi var. Projelerde Fushion360 ile 3D çizimler ve modelleme yapmakta.
+                <div class="about"> Tasarım bilgisi var. Projelerde Fusion360 ile 3D çizimler ve modelleme yapmakta.
 
                 </div>
 
